# wall-of-shame

./: CMakeLists.txt  Chrome.qml  Dock.qml  README.md  StartMenuRightIconButton.qml  main.qml  qml.qrc  win7.qml
ContextMenus/: CustomContextMenuBase.qml  TaskBarContextMenu.qml
src/: main.cpp  process.h
src/qml/: Chrome.qml  Dock.qml  StartMenuLeftPaneButton.qml  main.qml  qml.qrc
src/qml/ContextMenus/: CustomContextMenuBase.qml  DesktopContextMenu.qml  TaskBarContextMenu.qml
